Fix weird display bug where grey square would appear on hover randomly, figured out the source was overflow (unnecessary now)

--- a/AgencyApp/static/AgencyApp/css/post.css
+++ b/AgencyApp/static/AgencyApp/css/post.css
@@ -102,7 +102,6 @@
 	.projectContentListElementText
 	{
 		height: 120px;
-		overflow: scroll;
 	}
 	.projectTabButtonInactive
 	{
